apps/archive/base/steam/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: steam-headless
spec:
 serviceName: "steam-headless"
 replicas: 0
 selector:
   matchLabels:
     app: steam-headless
 template:
   metadata:
     labels:
       app: steam-headless
   spec:
     runtimeClassName: nvidia
     nodeName: mainkube
     hostNetwork: true
     securityContext:
       fsGroup: 1000
     containers:
     - name: steam-headless
       securityContext:
         privileged: true
       image: josh5/steam-headless:latest
       resources:
         requests:
           memory: "20G"
           cpu: "4"
         limits:
           memory: "24G"
           cpu: "4"
           nvidia.com/gpu: 1
       volumeMounts:
       - name: home-dir
         mountPath: /home/default/
       - name: games-dir
         mountPath: /mnt/games/
       - name: input-devices
         mountPath: /dev/input/
       - name: dshm
         mountPath: /dev/shm
     volumes:
     - name: home-dir
       hostPath:
         path: /mnt/slow/home
         type: DirectoryOrCreate
     - name: games-dir
       hostPath:
         path: /mnt/slow/games
         type: DirectoryOrCreate
     - name: input-devices
       hostPath:
         path: /dev/input/
     - name: dshm
       emptyDir:
         medium: Memory
