apps/archive/base/steam/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  ingressClassName: traefik
  rules:
    - host: j.pytt.io
      http:
        paths:
          - backend:
              service:
                name: jellyfin
                port:
                  number: 8096
            path: /
            pathType: Prefix
